Source/WebCore/dom/EventQueue.h
@@ -28,11 +28,11 @@
 #define EventQueue_h
 
 #include <wtf/HashSet.h>
+#include <wtf/ListHashSet.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/OwnPtr.h>
 #include <wtf/PassOwnPtr.h>
 #include <wtf/RefPtr.h>
-#include <wtf/Vector.h>
 
 namespace WebCore {
 
@@ -60,6 +60,7 @@ public:
 
     void enqueueEvent(PassRefPtr<Event>);
     void enqueueScrollEvent(PassRefPtr<Node>, ScrollEventTargetType);
+    bool cancelEvent(Event*);
 
 private:
     explicit EventQueue(ScriptExecutionContext*);
@@ -68,7 +69,7 @@ private:
     void dispatchEvent(PassRefPtr<Event>);
 
     OwnPtr<EventQueueTimer> m_pendingEventTimer;
-    Vector<RefPtr<Event> > m_queuedEvents;
+    ListHashSet<RefPtr<Event> > m_queuedEvents;
     HashSet<Node*> m_nodesWithQueuedScrollEvents;
     
     friend class EventQueueTimer;    
