Source/WebCore/storage/IDBTransaction.h
@@ -62,6 +62,9 @@ public:
     PassRefPtr<IDBObjectStore> objectStore(const String& name, ExceptionCode&);
     void abort();
 
+    void registerRequest(IDBRequest*);
+    void unregisterRequest(IDBRequest*);
+
     DEFINE_ATTRIBUTE_EVENT_LISTENER(abort);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(complete);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(error);
@@ -99,6 +102,8 @@ private:
     RefPtr<IDBDatabase> m_database;
     unsigned short m_mode;
     bool m_finished; // Is it possible that we'll fire any more events or allow any new transactions? If not, we're finished.
+
+    ListHashSet<IDBRequest*> m_childRequests;
 
     EventTargetData m_eventTargetData;
 };
